# shadowfuzz

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  afl-shadow-trace  mini_fuzzer.py  preo.md  process.md  run.sh  run_afl.sh  smoke_test.sh
dicts/: cmdi.dict  compare_more.dict  credential_file.dict  exec.dict  file_mutation.dict  format.dict  harness.dict  int_compare.dict  network.dict  network_send.dict  path.dict  persistent.dict  shared_object.dict
docs/: AFLPP_MODE.md  ARCHITECTURE.md  BENCHMARK.md  HARNESS_TEMPLATES.md  LIMITATIONS.md  RELEASE_NOTES_v0.1.0-alpha.1.md  TARGET_RECIPES.md
poc/: a.c  b.c  branch_churn.c  command_injection.c  command_system.c  compare_more.c  counter_loop.c  credential_file.c  env_access.c  exec_path.c  file_magic.c  file_mutation.c  format_string.c  int_compare.c  network_connect.c  network_send.c  path_open.c  persistent_harness.c  plugin_target.c  shared_entry_target.c  stack_overflow.c  strcmp_magic.c
policies/: base.release.policy  base64.release.policy  composed-smoke.policy  invalid-ngram.policy  invalid-section.policy  oracles.example.policy  smoke-oracles.policy
seeds/: b_seed
src/: shadowcov.c  shadowfuzz_dbi.c
templates/: cli_stdin_harness.sh  file_input_harness.sh  plugin_host_harness.c  shadowfuzz_persistent.h  shared_object_entry_harness.c
tools/: bench_shadowcov.py  forkserver_selftest.py
